[workspace]
members = ["primitives", "script", "program", "test"]
resolver = "2"

[workspace.package]
license = "MIT"
edition = "2021"
authors = ["xavierdmello", "ratankaliani"]
homepage = "https://succinctlabs.github.io/sp1-helios/"
repository = "https://github.com/succinctlabs/sp1-helios"

[workspace.dependencies]
sp1-helios-primitives = { path = "primitives" }
helios-consensus-core = { git = "https://github.com/a16z/helios", tag = "0.9.4" }
helios-ethereum = { git = "https://github.com/a16z/helios", tag = "0.9.4" }

# general
dotenv = "0.15.0"

# sp1 dependencies. Keep the same version
# ! When updating `sp1-build` version, update the `--tag` in both `script/build.rs` and `justfile`.
# Also, in .gihub/workflows/elf.yml cargo prove command. Todo: consider adding a commit hook for this
sp1-sdk = { version = "5.2.1", default-features = false, features = ["network"] }
sp1-build = "5.2.1"

tokio = "1.44.2"
serde = "1.0.203"
thiserror = "1.0.61"
serde_cbor = "0.11.2"
serde_json = "1.0.125"
clap = "4.5.9"
log = "0.4.22"
env_logger = "0.11.3"
alloy-rlp = { version = "0.3.9", default-features = false, features = [
    "derive",
    "arrayvec",
] }
alloy = { version = "1.0.37", features = ["full"] }

# from alloy-rs/core workspace
alloy-primitives = "1.3.0"
alloy-sol-types = "1.3.0"

alloy-trie = { version = "0.9.1", features = ["ethereum", "serde"] }
anyhow = "1.0.86"
reqwest = "0.12.5"
tree_hash = "0.10.0"
cargo_metadata = "0.18"

[patch.crates-io]
sha2-v0-9-9 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.9.9-sp1-4.0.0" }
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
sha3-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", tag = "patch-sha3-0.10.8-sp1-4.0.0" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-4.0.0" }
bls12_381 = { git = "https://github.com/sp1-patches/bls12_381", tag = "patch-0.8.0-sp1-5.0.0-v2" }
# From upstream: https://github.com/a16z/helios/blob/e030480100ff2b21a218eda076a9a80b2f55978c/Cargo.toml#L127
ethereum_hashing = { git = "https://github.com/ncitron/ethereum_hashing", rev = "7ee70944ed4fabe301551da8c447e4f4ae5e6c35" }
