[package]
version = "0.1.0"
name = "sp1-helios-script"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "genesis"
path = "./bin/genesis.rs"

[[bin]]
name = "operator"
path = "./bin/operator.rs"

[[bin]]
name = "operator2"
path = "./bin/operator2.rs"

[[bin]]
name = "test"
path = "./bin/test.rs"

[[bin]]
name = "vkey"
path = "./bin/vkey.rs"

[dependencies]
dotenv = { workspace = true }
sp1-sdk = { workspace = true }
tokio = { workspace = true }
helios-consensus-core = { workspace = true }
helios-ethereum = { workspace = true }
sp1-helios-primitives = { workspace = true }
serde = { workspace = true }
serde_cbor = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
alloy-primitives = { workspace = true }
alloy = { workspace = true }
anyhow = { workspace = true }
cargo_metadata = { workspace = true }
reqwest = { workspace = true }
tree_hash = { workspace = true }
serde_json = { workspace = true }
alloy-trie = { workspace = true }
alloy-rlp = { workspace = true }
axum = "0.8.3"
redis = { version = "0.26.0", features = ["tokio-comp", "connection-manager"] }
thiserror = { workspace = true }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }
utoipa-axum = "0.2.0"
tokio-util = "0.7.14"

[build-dependencies]
sp1-build = { workspace = true }
