[package]
version = "0.1.0"
name = "sp1-helios-test"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
dotenv = { workspace = true }
sp1-sdk = { workspace = true }
tokio = { workspace = true }
helios-consensus-core = { workspace = true }
helios-ethereum = { workspace = true }
sp1-helios-primitives = { workspace = true }
serde = { workspace = true }
serde_cbor = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
alloy-primitives = { workspace = true }
alloy = { workspace = true }
anyhow = { workspace = true }
cargo_metadata = { workspace = true }
tree_hash = { workspace = true }
serde_json = { workspace = true }
alloy-trie = { workspace = true }
alloy-rlp = { workspace = true }

# [build-dependencies]
# sp1-build = { workspace = true }
